test/files/pos/t5031_2.scala
package object t5031 {
  class ID
}

package t5031 {
  object ID
}
