test/files/neg/t5031/package.scala
package object t5031 {
  class Test
}
